Added Ef Core and Scaffolded Database

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection":  "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true" 
+  }, 
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -19,9 +22,9 @@
         "Name": "Seq",
         "Args": {
           "serverUrl": "http://localhost:5341"
-        } 
+        }
       }
     ]
-  } ,
+  },
   "AllowedHosts": "*"
 }
