--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "BookStoreAppDbConnection":  "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true" 
-  }, 
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -25,6 +25,11 @@
         }
       }
     ]
+  },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI",
+    "Audience":  "BookStoreApiClient",
+    "Duration": 1
   },
   "AllowedHosts": "*"
 }
