--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookStoreAppDbConnection":  "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true" 
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -28,8 +28,9 @@
   },
   "JwtSettings": {
     "Issuer": "BookStoreAPI",
-    "Audience":  "BookStoreApiClient",
-    "Duration": 1
+    "Audience": "BookStoreApiClient",
+    "Duration": 1,
+    "Key": "650c0a55-309a-48a6-b7d1-a24f090d2ddc"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 }
